--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,15 @@
-#quadrado--preto{
-	width: 400px;
-	height: 400px;
-	position: relative;
+@import url("https://fonts.googleapis.com/css?family=Ubuntu");
 
-	animation-name: movimento; /*aqui eu dou nome ao movimento */
-	animation-duration: 10s; /*duracao que animacao vai ter */
-	animation-iteration-count: infinite;
-	animation-timing-function: ease;
+body{
+	background-color: #9C9C9C;
+	font-family: 'Ubuntu', cursive;
+	font-size: 1em;
 }
 
-@keyframes movimento{
-	0% { /* ponto inicial da animacao */
-		left:-600px;
-		top:0px;
-	}
+.jumbotron, .card{
+	border-radius: 0px !important;
+}
 
-	/*25% {
-		left:100px;
-		top:0px;
-	}
-
-	50% {
-		left:500px;
-		top:0px;
-	}*/
-
-	75% { /* ponto final da animacao */
-		left:700px;
-		top:0px;
-	}
-
-	100%{
-		left:1000px;
-		top:0px;
-		transform: rotateZ(0deg);
-	}
+.fundo--tomato{
+	background-color: 
 }
